--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,36 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">MXTPFY</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "All MXTP", statuses_path %></li>
+<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+  </div><!-- container-fluid-->
+  	<div>
+      <ul class="nav nabar-nav">
+      </ul>
+  </div>
+  </div><!-- containter-fluid-->
+</nav>
+		<div class="container">
 <%= yield %>
+	
+		</div><!-- container -->
 
 </body>
 </html>
+
