--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
   </div><!-- containter-fluid-->
 </nav>
 		<div class="container">
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 <%= yield %>
 	
 		</div><!-- container -->
