--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -2,12 +2,15 @@
 
 <p>
   <strong>Name:</strong>
+  <%= @status.name %>
 </p>
 
 <p>
   <strong>Content:</strong>
   <%= @status.content %>
 </p>
+<iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:<%=@spotify_user.id%>&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe><br>
+<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A<%=@spotify_user.id%>%3Aplaylist%3A<%=@status.playlist%>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br>
 
 <%= link_to 'Edit', edit_status_path(@status) %> |
 <%= link_to 'Back', statuses_path %>
