--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="initial-scale=1">
 <head>
   <title>Spotihunt</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -45,7 +46,7 @@
   Sign in with your Spotify-Account and post a "Hunt" - a Spotify-Playlist you think the world should know about. 
 </p>
 </h2>
-  <p><a class="btn btn-primary btn-lg" href="/users/auth/spotify" role="button">Sign Up with your Spotify-Account</a>
+ <p><a class="btn btn-primary btn-lg" href="/users/auth/spotify" role="button" >Sign Up with your Spotify-Account</a>
 </div>
 
 <%= yield %>
