--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">SPOTIHUNT</a>
+      <a class="navbar-brand">SPOTIHUNT</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,7 +25,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "ALL HUNTS", statuses_path %></li>
 <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">About</a></li>
+        <li><%= link_to "ABOUT", static_pages_about_path %></li> 
   </div><!-- container-fluid-->
   	<div>
       <p class="navbar-text pull-right">
@@ -40,14 +40,7 @@
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
-<div class="jumbotron">
-<h2>
-<p>
-  Sign in with your Spotify-Account and post a "Hunt" - a Spotify-Playlist you think the world should know about. 
-</p>
-</h2>
- <p><a class="btn btn-primary btn-lg" href="/users/auth/spotify" role="button" >Sign Up with your Spotify-Account</a>
-</div>
+
 
 <%= yield %>
 	
