--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,11 +1,13 @@
+<div class="containter-fluid">
 <div class="jumbotron">
 <h2>
 <p>
   Sign in with your Spotify-Account and post a "Hunt" - a Spotify-Playlist you think the world should know about. 
 </p>
 </h2>
- <p><a class="btn btn-primary btn-lg" href="/users/auth/spotify" role="button" >Sign Up with your Spotify-Account</a>
+ <p><a class="btn btn-primary" href="/users/auth/spotify" role="button" >Sign Up with your Spotify-Account</a>
 
-<p><a class="btn btn-info btn-lg" href="/statuses" role="button" >Wait, mister fancy pants, I want to check out some HUNTS first</a>
+<p><a class="btn btn-info" href="/statuses" role="button" >Wait, Mr. Fancy Pants, show some HUNTS first</a>
 
+</div>
 </div>
