--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,39 +2,37 @@
 <html>
 <meta name="viewport" content="initial-scale=1">
 <head>
-  <title>Spotihunt</title>
+  <title>Spotihunt - Spotify Playlist Hunter</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!--Navigation-->  
 <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
     <div class="navbar-header">
-    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">SPOTIHUNT</a>
+      <a class="navbar-brand" href="/users/auth/spotify">SPOTIHUNT</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "ALL HUNTS", statuses_path %></li>
-<span class="sr-only">(current)</span></a></li>
-        <li><%= link_to "ABOUT", static_pages_about_path %></li> 
-  </div><!-- container-fluid-->
+        <li> <%= link_to "ALL HUNTS", statuses_path %></li>
+        <li> <%= link_to "ABOUT", static_pages_about_path %></li> 
+      </ul>  
   	<div>
       <p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  <strong><%= current_user.name %></strong> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% end %>
-  </div>
-  </div><!-- container-fluid-->
+        <% if user_signed_in? %>
+        <strong><%= current_user.name %></strong> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% end %>
+    </div>
 </nav>
 		<div class="container">
        <p class="notice"><%= notice %></p>
