--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,32 +1,32 @@
 <p id="notice"><%= notice %></p>
 
 <div class="panel panel-default">
-<div class="panel-heading"
-<p>
-	<h4>
-  <%= @status.name %>
-</h4>
-</p>
-</div>
-<div class="panel-body"
-<p>
-  <%= @status.content %>
-</p>
-<hr>
+  <div class="panel-heading">
+    <p>
+    	<h4>
+      <%= @status.name %>
+      </h4>
+    </p>
+  </div>
+  <div class="panel-body">
+    <p>
+      <%= @status.content %>
+    </p>
+    <hr>
 
-<p>
-<iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:<%=@spotify_user.id%>&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
-</p>
+    <p>
+      <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:<%=@spotify_user.id%>&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+    </p>
 
-<p>
-<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A<%=@spotify_user.id%>%3Aplaylist%3A<%=@status.playlist%>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-</p>
-<br>
-</div>
+    <p>
+      <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A<%=@spotify_user.id%>%3Aplaylist%3A<%=@status.playlist%>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+    </p>
+    <br>
 
-<div class="list-group">
-<li class="list-group-item"><%= link_to 'Edit', edit_status_path(@status) %></li>
-<li class="list-group-item"><%= link_to 'Back', statuses_path %></li>
-</ul>
-
+    <ul class="list-group">
+      <li class="list-group-item"><%= link_to 'Edit', edit_status_path(@status) %></li>
+      <li class="list-group-item"><%= link_to 'Back', statuses_path %></li>
+    </ul>
+  </div>
+  <%= render "comments" %>
 </div>
