--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,3 +1,60 @@
+<!-- Page Content -->
+    <div class="container">
+
+        <!-- Jumbotron Header -->
+        <header class="jumbotron hero-spacer">
+            <h1>Musiclover!</h1>
+            <p>SPOTIHUNT is all about your favorite Spotify-playlists and records. Post your gems and hunts to other music lovers out there. Get feedback and upvotes on your taste and earn fame for your taste.</p>
+            <p><a class="btn btn-primary" href="/users/auth/spotify" role="button" >Sign Up with your Spotify-Account</a>
+
+			<p><a class="btn btn-info" href="/statuses" role="button" >Wait, Mr. Fancy Pants, show some HUNTS first</a>
+        </header>
+
+
+<hr>
+
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Latest Infos and News</h3>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Page Features -->
+        <div class="row text-center">
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <%=image_tag("headphones_final.png", alt: "I want to be a SPOTIHUNT Curator")%>
+                    <div class="caption">
+                        <h3>Curators</h3>
+                        <p>We're looking for permanent curators. If you think of yourself as a music-afficionado, please get in touch.</p>
+                        <p>
+                             <a href="mailto:curator@spotihunt.com" class="btn btn-default">I wanna be a Curator...</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <%=image_tag("improvements_final.png", alt: "Improvements")%>
+                    <div class="caption">
+                        <h3>Improvements</h3>
+                        <p>We're happy to improve SPOTIHUNT. Please drop us a line and tell us what you miss!</p>
+                        <p>
+                             <a href="mailto:curator@spotihunt.com" class="btn btn-default">You could do better with...</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            
+
+        </div>
+        <!-- /.row -->
+
 <div class="containter-fluid">
 <div class="jumbotron">
 <h2>
