--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -1,13 +1,15 @@
 <div class="status">
+  <div class="pull-right">
   <%= render "voting", status: status %>
+</div>
   <%= image_tag status.image, width: "50", height: "50" %>
   <strong><%= status.name %></strong>
   <p><%= status.content %></p>
   <div class="meta">
-    <%= link_to time_ago_in_words(status.created_at) + " ago", status %> 
+    <%= link_to time_ago_in_words(status.created_at) + " ago", status, :class => 'btn btn-success' %> 
     <span class="admin">
-      | <%= link_to "Edit", edit_status_path(status) %>
-      | <%= link_to "Delete", status, method: :delete, data:{ confirm: "Are you sure you want to delete this Hunt?"} %>
+       <%= link_to "Edit", edit_status_path(status), :class => 'btn btn-info' %>
+       <%= link_to "Delete", status, method: :delete, data:{ confirm: "Are you sure you want to delete this Hunt?"}, :class => 'btn btn-danger'%>
     </span>
 
   </div>
