--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,15 +36,11 @@
         <% end %>
     </div>
 </nav>
-		<div class="container">
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-
-
-
-<%= yield %>
-	
-		</div><!-- container -->
+<div class="container">
+   <!-- <p class="notice"><%= notice %></p>
+   <p class="alert"><%= alert %></p> -->
+  <%= yield %>
+</div><!-- container -->
 
 </body>
 </html>
