--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,10 +1,11 @@
+<% unless user_signed_in? %>
+  <%= render "jumbotron" %>
+<% end %>
 <div class="page-header">
   <h1>All Hunts
   <%= link_to "Post a new Hunt", new_status_path, class: "btn btn-small btn-primary" %>
 </h1>
 </div>
-
-
 
 <% @statuses.each do |status| %>
   <div class="status-<%=status.id%>-container">
