--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,7 +1,118 @@
-<!-- Page Content -->
+    <section id="banner">
+      <div class="inner">
+        <h2>Spotihunt</h2>
+        <p>Spotify Playlist Hunter</p>
+        <ul class="actions">
+            <% unless user_signed_in? %>
+              <li>
+                <%= link_to omniauth_authorize_path(:user, :spotify) do %>
+                  <%= image_tag "log_in-desktop-large.png" %>
+                <% end %>
+              </li>
+            <% else %>
+                <li><a href="#" class="button special">
+                  Go To the app
+              </a></li>
+            <% end %>
+        </ul>
+      </div>
+      <a href="#one" class="more scrolly">Learn More</a>
+    </section>
+
+  <!-- One -->
+    <section id="one" class="wrapper style1 special">
+      <div class="inner">
+        <header class="major">
+          <h2>Hey, Musiclover!</h2>
+          <p>SPOTIHUNT is all about your favorite Spotify-playlists and records. <br>Post your gems and hunts to other music lovers out there. <br>Get feedback and upvotes on your taste and earn fame for your taste.</p>
+        </header>
+        <ul class="icons major">
+          <li><span class="icon fa-music major style1"><span class="label">Lorem</span></span></li>
+          <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
+          <li><span class="icon fa-comment-o major style3"><span class="label">Dolor</span></span></li>
+        </ul>
+      </div>
+    </section>
+
+  <!-- Two -->
+    <section id="two" class="wrapper alt style2">
+      <section class="spotlight">
+        <div class="image"><%= image_tag "pic01.jpg" %></div><div class="content">
+          <h2>Magna primis lobortis<br />
+          sed ullamcorper</h2>
+          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image"><%= image_tag "pic02.jpg" %></div><div class="content">
+          <h2>Tortor dolore feugiat<br />
+          elementum magna</h2>
+          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+        </div>
+      </section>
+      <section class="spotlight">
+        <div class="image"><%= image_tag "pic03.jpg" %></div><div class="content">
+          <h2>Augue eleifend aliquet<br />
+          sed condimentum</h2>
+          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+        </div>
+      </section>
+    </section>
+
+  <!-- Three -->
+    <section id="three" class="wrapper style3 special">
+      <div class="inner">
+        <header class="major">
+          <h2>Accumsan mus tortor nunc aliquet</h2>
+          <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+          fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+        </header>
+        <ul class="features">
+          <li class="icon fa-paper-plane-o">
+            <h3>Arcu accumsan</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+          <li class="icon fa-laptop">
+            <h3>Ac Augue Eget</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+          <li class="icon fa-code">
+            <h3>Mus Scelerisque</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+          <li class="icon fa-headphones">
+            <h3>Mauris Imperdiet</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+          <li class="icon fa-heart-o">
+            <h3>Aenean Primis</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+          <li class="icon fa-flag-o">
+            <h3>Tortor Ut</h3>
+            <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+  <!-- CTA -->
+    <section id="cta" class="wrapper style4">
+      <div class="inner">
+        <header>
+          <h2>Arcue ut vel commodo</h2>
+          <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+        </header>
+        <ul class="actions vertical">
+          <li><a href="#" class="button fit special">Activate</a></li>
+          <li><a href="#" class="button fit">Learn More</a></li>
+        </ul>
+      </div>
+    </section>
+
+<!-- 
     <div class="container">
 
-        <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
             <h1>Musiclover!</h1>
             <p>SPOTIHUNT is all about your favorite Spotify-playlists and records. Post your gems and hunts to other music lovers out there. Get feedback and upvotes on your taste and earn fame for your taste.</p>
@@ -13,15 +124,11 @@
 
 <hr>
 
-        <!-- Title -->
         <div class="row">
             <div class="col-lg-12">
                 <h3>Latest Infos and News</h3>
             </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Page Features -->
         <div class="row text-center">
 
             <div class="col-md-3 col-sm-6 hero-feature">
@@ -53,7 +160,6 @@
             
 
         </div>
-        <!-- /.row -->
 
 <div class="containter-fluid">
 <div class="jumbotron">
