--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,40 +7,71 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-<!--Navigation-->  
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-header">
-    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/users/auth/spotify">SPOTIHUNT</a>
-    </div>
+<body class="landing">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li> <%= link_to "ALL HUNTS", statuses_path %></li>
-        <li> <%= link_to "ABOUT", static_pages_about_path %></li> 
-      </ul>  
-  	<div>
-      <p class="navbar-text pull-right">
-        <% if user_signed_in? %>
-          <%= image_tag current_user.image, width: "20", height: "20" %>
-          <strong><%= current_user.name %></strong> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-        <% end %>
-    </div>
-</nav>
-<div class="container">
-   <!-- <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p> -->
+<!-- Page Wrapper -->
+<div id="page-wrapper">
+
+  <!-- Header -->
+    <header id="header" class="alt">
+      <h1><a href="javascript:void(0);" onclick="$('html, body').animate({ scrollTop: 0 }, 500);">Spotihunt</a></h1>
+      <nav id="nav">
+        <ul>
+          <li class="special">
+            <a href="#" class="menuToggle"><span>Menu</span></a>
+            <div id="menu">
+              <% if user_signed_in? %>
+                <%= image_tag current_user.image, width: "100", height: "100", class: "img-responsive center-block" %>
+                <p class="text-center"><strong><%= current_user.name %></strong></p>
+                <hr>
+              <% end %>
+              <ul>
+                <li>
+                  <%= link_to "Home", root_path %>
+                </li>
+                <li> <%= link_to "About", "#" %></li> 
+                <% if user_signed_in? %>
+                  <li> <%= link_to "All Hunts", statuses_path %></li>
+                  <li><%= link_to "Log out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+                <% else %>
+                  <li>
+                    <%= link_to "Log In with Spotify", omniauth_authorize_path(:user, :spotify) %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
   <%= yield %>
-</div><!-- container -->
+  
+  <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <li><a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; spotihunt.com 2015</li>
+      </ul>
+    </footer>
+
+</div>
+<!-- Scripts -->
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.scrollex.min.js"></script>
+<script src="js/jquery.scrolly.min.js"></script>
+<script src="js/skel.min.js"></script>
+<script src="js/init.js"></script>
 
 </body>
 </html>
