some frontend adaptations

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,7 +10,7 @@
                 <% end %>
               </li>
             <% else %>
-                <li><a href="#" class="button special">
+                <li><a href="/statuses" class="button special">
                   Go To the app
               </a></li>
             <% end %>
@@ -24,7 +24,7 @@
       <div class="inner">
         <header class="major">
           <h2>Hey, Musiclover!</h2>
-          <p>SPOTIHUNT is all about your favorite Spotify-playlists and records. <br>Post your gems and hunts to other music lovers out there. <br>Get feedback and upvotes on your taste and earn fame for your taste.</p>
+          <p>SPOTIHUNT is all about your favorite Spotify playlists and records. <br>Post your gems and hunts and <br>gain feedback and upvotes on your taste.</p>
         </header>
         <ul class="icons major">
           <li><span class="icon fa-music major style1"><span class="label">Lorem</span></span></li>
@@ -37,29 +37,33 @@
   <!-- Two -->
     <section id="two" class="wrapper alt style2">
       <section class="spotlight">
-        <div class="image"><%= image_tag "pic01.jpg" %></div><div class="content">
-          <h2>Magna primis lobortis<br />
-          sed ullamcorper</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+        <div class="image"><%= image_tag "headphones_final.png" %></div><div class="content">
+          <h2>Curators</h2>
+          <p>We're looking for permanent curators who think their music taste can't be missed out.</p>
+          <li><a href="mailto:spotihunt@gmail.com" class="button special">
+                  Contact
+              </a></li>
         </div>
       </section>
       <section class="spotlight">
-        <div class="image"><%= image_tag "pic02.jpg" %></div><div class="content">
-          <h2>Tortor dolore feugiat<br />
-          elementum magna</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+        <div class="image"><%= image_tag "improvements_final.png" %></div><div class="content">
+          <h2>Bugs and Features</h2>
+          <p>Spotihunt just launched and is far from perfect. Get back to us with feedback and bugs of any kind. We appreciate it.</p>
+          <li><a href="mailto:spotihunt@gmail.com" class="button special">
+                  Contact
+              </a></li>
         </div>
       </section>
-      <section class="spotlight">
+      <!--<section class="spotlight">
         <div class="image"><%= image_tag "pic03.jpg" %></div><div class="content">
           <h2>Augue eleifend aliquet<br />
           sed condimentum</h2>
           <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
         </div>
       </section>
-    </section>
+    </section> -->
 
-  <!-- Three -->
+  <!-- Three 
     <section id="three" class="wrapper style3 special">
       <div class="inner">
         <header class="major">
@@ -94,9 +98,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-  <!-- CTA -->
+  <!-- CTA 
     <section id="cta" class="wrapper style4">
       <div class="inner">
         <header>
@@ -108,7 +112,7 @@
           <li><a href="#" class="button fit">Learn More</a></li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
 <!-- 
     <div class="container">
