--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -15,8 +15,8 @@
                 <th>Image</th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Voting</th>
                 <th>Actions</th>
-                <th></th>
               </tr>
             </thead>
             <tbody>
