added newsletter subscription

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -34,6 +34,30 @@
       </div>
     </section>
 
+
+<!-- CTA -->
+    <section id="cta" class="wrapper style4">
+      <div class="12u$">
+        <header>
+          <h2 style="text-align: center">Death to bad music</h2>
+          
+         
+        </header>
+        <p style="text-align: center">Subsribe to the SPTHNT Weekly Newsletter.</p>
+           <form style="border:5px solid #ccc;padding:10px;text-align:center;" action="https://tinyletter.com/Spotihunt" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Spotihunt', 'popupwindow', 'scrollbars=yes,width=auto,height=auto');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:100" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank"></a></p></form>
+
+
+        <!-- 
+
+
+        ul class="actions vertical">
+          <li><a href="#" class="button fit special"></a></li>
+          <li><a href="#" class="button fit">Learn More</a></li>
+        </ul>-->
+      </div>
+    </section> 
+
+
   <!-- Two -->
     <section id="two" class="wrapper alt style2">
       <section class="spotlight">
@@ -100,19 +124,7 @@
       </div>
     </section> -->
 
-  <!-- CTA 
-    <section id="cta" class="wrapper style4">
-      <div class="inner">
-        <header>
-          <h2>Arcue ut vel commodo</h2>
-          <p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-        </header>
-        <ul class="actions vertical">
-          <li><a href="#" class="button fit special">Activate</a></li>
-          <li><a href="#" class="button fit">Learn More</a></li>
-        </ul>
-      </div>
-    </section> -->
+  
 
 <!-- 
     <div class="container">
