--- a/app/views/statuses/new.html.erb
+++ b/app/views/statuses/new.html.erb
@@ -1,5 +1,15 @@
-<h2>New Hunt</h2>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', statuses_path %>
+<article id="main">
+  <header>
+    <h2>New Hunt</h2>
+  </header>
+  <section class="wrapper style5">
+    <div class="inner">
+      <section>
+        <%= render 'form' %>
+      </section>
+      <section>
+        <%= link_to 'Back', statuses_path %>
+      </section>
+    </div>
+  </section>
+</article>
