--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body class="landing">
 
@@ -33,7 +33,7 @@
               <% end %>
               <ul>
                 <li>
-                  <%= link_to "Home", root_path %>
+                  <%= link_to "Home", root_path, data: { no_turbolink: true } %>
                 </li>
                 <li> <%= link_to "About", "#" %></li> 
                 <% if user_signed_in? %>
@@ -67,11 +67,11 @@
 
 </div>
 <!-- Scripts -->
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.scrollex.min.js"></script>
-<script src="js/jquery.scrolly.min.js"></script>
-<script src="js/skel.min.js"></script>
-<script src="js/init.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.scrollex.min.js"></script>
+<script src="/js/jquery.scrolly.min.js"></script>
+<script src="/js/skel.min.js"></script>
+<script src="/js/init.js"></script>
 
 </body>
 </html>
