--- a/app/views/statuses/_comments.html.erb
+++ b/app/views/statuses/_comments.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 col-sm-offset-1" id="logout">
+    <div class="col-sm-12" id="logout">
         <div class="page-header">
             <h3 class="reviews">Leave your comment</h3>
         </div>
@@ -50,9 +50,9 @@
                       </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">                    
-                          <%= button_tag type: "submit", class: "btn btn-success btn-circle text-uppercase", id: "submitComment" do %>
-                            <span class="fa fa-paper-plane"></span> Submit comment
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <%= button_tag type: "submit", class: "button special icon fa-paper-plane", id: "submitComment" do %>
+                            Submit comment
                           <% end %>
                         </div>
                     </div>            
