--- a/app/views/statuses/edit.html.erb
+++ b/app/views/statuses/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing status</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @status %> |
-<%= link_to 'Back', statuses_path %>
+<article id="main">
+  <header>
+    <h2>Edit Hunt</h2>
+  </header>
+  <section class="wrapper style5">
+    <div class="inner">
+      <section>
+        <%= render 'form' %>
+      </section>
+      <section>
+        <%= link_to 'Show', @status %> |
+        <%= link_to 'Back', statuses_path %>
+      </section>
+    </div>
+  </section>
+</article>
