added about content

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,91 @@
-<!-- Page Content -->
-    <div class="container">
+<!-- About --> 
+    <section id="three" class="wrapper style3 special">
+      <div class="inner">
+        <header class="major">
+          <h2>About SPOTIHUNT</h2>
+          <p>Spotihunt is made in Switzerland and Ukrainia by @mathiasmenzl and Yaroslav (do you have a Twitter-Handle?)</p>
+        </header>
+        <ul class="features">
+          <li class="icon fa-paper-plane-o">
+            <h3>In a nutshell</h3>
+            <p>Spotify is the greates streaming-service. But it has one major pain-point: Spotify is bad in curating. That's why we build SPOTIHUNT.</p>
+            <p>If you think we could do better (what we very likely could) we appreciate your feedback and inputs. Please send us an <a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a> or get in contact via <a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a> or <a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a>. 
+            </p>
+            <p>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                  <input type="hidden" name="cmd" value="_s-xclick">
+                  <input type="hidden" name="hosted_button_id" value="KY2355BYJAHJS">
+                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                  <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1"></form>
+            </p>
+          </li>
+          <li class="icon fa-laptop">
+            <h3>SPOTIHUNT Newsletter</h3>
+            <p>Death to bad music ist our weekly SPOTIHUNT-Newsletter. If you want to get a weekly dose of good music straignt in your inbox, subscribe right here:</p>
+            <form style="border:5px solid #ccc;padding:10px;text-align:center;" action="https://tinyletter.com/Spotihunt" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Spotihunt', 'popupwindow', 'scrollbars=yes,width=auto,height=auto');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:100" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank"></a></p></form>
+          </li>
+          <li class="icon fa-code">
+            <h3>Rails</h3>
+            <p>SPOTIHUNT is a Web-App based on Ruby on Rails.</p>
+          </li>
+          <li class="icon fa-headphones">
+            <h3>Music</h3>
+            <p>SPOTIHUNT is made by and for music-lovers. </p>
+          </li>
+          <li class="icon fa-heart-o">
+            <h3>Spread</h3>
+            <p>If you like SPOTIHUNT, please spread the word.</p>
+         <p>
+            <ul class="icons">
+                <a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a>
+                <a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a>
+                <a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a>
+                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                  <input type="hidden" name="cmd" value="_s-xclick">
+                  <input type="hidden" name="hosted_button_id" value="KY2355BYJAHJS">
+                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                  <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1"></form> <span class="label"></span></a>
+            </ul>
+        </p>
+           </li>
+          <li class="icon fa-flag-o">
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </div>
+    </section> 
 
-        <!-- Jumbotron Header -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Page Content 
+    <div class="container">
+-->
+        <!-- Jumbotron Header 
         <header class="jumbotron hero-spacer">
             <h1>Musiclover!</h1>
             <p>SPOTIHUNT is all about your favorite Spotify-playlists and records. Post your gems and hunts to other music lovers out there. Get feedback and upvotes on your taste and earn fame for your taste.</p>
@@ -11,17 +95,17 @@
         </header>
 
 
-<hr>
+<hr> -->
 
-        <!-- Title -->
+        <!-- Title 
         <div class="row">
             <div class="col-lg-12">
                 <h3>Latest Infos and News</h3>
             </div>
         </div>
-        <!-- /.row -->
+        /.row -->
 
-        <!-- Page Features -->
+        <!-- Page Features 
         <div class="row text-center">
 
             <div class="col-md-3 col-sm-6 hero-feature">
@@ -52,6 +136,6 @@
 
             
 
-        </div>
+        </div> -->
         <!-- /.row -->
 
