--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -24,14 +24,15 @@
       <div class="inner">
         <header class="major">
           <h2>Hey, Musiclover!</h2>
-          <p>SPOTIHUNT is all about your favorite Spotify playlists and records. <br>Post your gems and hunts and <br>gain feedback and upvotes on your taste.</p>
+          <p>SPOTIHUNT is all about your favorite songs and playlists. <br>Post your gems and hunts, <br>gain instant feedback, upvotes & fame on your taste.</p>
         </header>
         <ul class="icons major">
-          <li><span class="icon fa-music major style1"><span class="label">Lorem</span></span></li>
-          <li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-          <li><span class="icon fa-comment-o major style3"><span class="label">Dolor</span></span></li>
+          <li><span class="icon fa-music major style1"><span class="label">Music</span></span></li>
+          <li><span class="icon fa-heart-o major style2"><span class="label">Love</span></span></li>
+          <li><span class="icon fa-comment-o major style3"><span class="label">Comment & Vote</span></span></li>
         </ul>
       </div>
+      <a href="#cta" class="more scrolly">Get the Newsletter</a>
     </section>
 
 
@@ -39,11 +40,11 @@
     <section id="cta" class="wrapper style4">
       <div class="12u$">
         <header>
-          <h2 style="text-align: center">Death to bad music</h2>
+          <h2 style="text-align: center">Death to bad music: Get your weekly dose of good music straight to your inbox (powered by Tinyletter)</h2>
           
          
         </header>
-        <p style="text-align: center">Subsribe to the SPTHNT Weekly Newsletter.</p>
+        <p style="text-align: center">Subsribe to the SPOTIHUNT Weekly Newsletter.</p>
            <form style="border:5px solid #ccc;padding:10px;text-align:center;" action="https://tinyletter.com/Spotihunt" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Spotihunt', 'popupwindow', 'scrollbars=yes,width=auto,height=auto');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:100" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank"></a></p></form>
 
 
@@ -64,18 +65,19 @@
         <div class="image"><%= image_tag "headphones_final.png" %></div><div class="content">
           <h2>Curators</h2>
           <p>We're looking for permanent curators who think their music taste can't be missed out.</p>
-          <li><a href="mailto:spotihunt@gmail.com" class="button special">
+          <a href="mailto:spotihunt@gmail.com" class="button">
                   Contact
-              </a></li>
+              </a>
         </div>
       </section>
       <section class="spotlight">
         <div class="image"><%= image_tag "improvements_final.png" %></div><div class="content">
           <h2>Bugs and Features</h2>
           <p>Spotihunt just launched and is far from perfect. Get back to us with feedback and bugs of any kind. We appreciate it.</p>
-          <li><a href="mailto:spotihunt@gmail.com" class="button special">
+          <a href="mailto:spotihunt@gmail.com" class="button">
                   Contact
-              </a></li>
+              </a>
+          
         </div>
       </section>
       <!--<section class="spotlight">
