--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                 <li>
                   <%= link_to "Home", root_path, data: { no_turbolink: true } %>
                 </li>
-                <li> <%= link_to "About", "#" %></li> 
+                <li> <%= link_to "About", "/static_pages/about" %></li> 
                 <% if user_signed_in? %>
                   <li> <%= link_to "All Hunts", statuses_path %></li>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
@@ -59,6 +59,11 @@
         <li><a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
         <li><a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+         <li> <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="KY2355BYJAHJS">
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+              <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1"></form> <span class="label"></span></a></li>
       </ul>
       <ul class="copyright">
         <li>&copy; spotihunt.com 2015</li>
