--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
     <footer id="footer">
       <ul class="icons">
         <li><a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+         <li><a href="whatsapp://send" data-text="Take a look at this awesome website:" data-href="http://spotihunt.com" class="icon fa-whatsapp" style="display:none">Share</a></li>
         <li><a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
          <li> <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -77,6 +78,8 @@
 <script src="/js/jquery.scrolly.min.js"></script>
 <script src="/js/skel.min.js"></script>
 <script src="/js/init.js"></script>
+<!-- whats app share -->
+<script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="https://s3.amazonaws.com/mixtapeify/images/whatsapp-button.js";h.appendChild(s);}</script>
 
 </body>
 </html>
