--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,16 @@
+<!-- facebook like stuff -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.3&appId=179274055481335";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- whats app share -->
+<script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="https://s3.amazonaws.com/mixtapeify/images/whatsapp-button.js";h.appendChild(s);}</script>
+
 <!-- About --> 
     <section id="three" class="wrapper style3 special">
       <div class="inner">
@@ -35,22 +48,28 @@
           <li class="icon fa-heart-o">
             <h3>Spread</h3>
             <p>If you like SPOTIHUNT, please spread the word.</p>
-         <p>
-            <ul class="icons">
-                <a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a>
-                <a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a>
-                <a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a>
+            <a href="whatsapp://send" data-text="Take a look at this awesome website:" data-href="http://spotihunt.com" class="wa_btn wa_btn_s" style="display:none">Share</a></p>
+        
+         
+                <div class="fb-like" data-href="https://facebook.com/spotihunt" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div><br>
+
+                <p><a href="https://twitter.com/intent/tweet?button_hashtag=Spotihunt&text=Hunt%20your%20favorite%20music%20on%20%23SPOTIHUNT" class="twitter-hashtag-button" data-size="small" data-related="Spotihunt" data-url="http://spotihunt.com">Tweet #Spotihunt</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+
+        
                  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                  <input type="hidden" name="cmd" value="_s-xclick">
-                  <input type="hidden" name="hosted_button_id" value="KY2355BYJAHJS">
-                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1"></form> <span class="label"></span></a>
-            </ul>
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="757SKFZPZERVS">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                     <span class="label"></span></a>
+           
         </p>
            </li>
           <li class="icon fa-flag-o">
-            <h3></h3>
-            <p></p>
+            <h3>Thank Yous</h3>
+            <p>Beautiful Imagery by courtesy of <a href="https://unsplash.com/" target="_blank">unsplash.com</a></p>
+            <p>Beautiful design by courtesy of <a href="http://html5up.net/spectral" target="_blank">html5up.net</a></p>
           </li>
         </ul>
       </div>
