--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,15 +8,13 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<!-- whats app share -->
-<script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="https://s3.amazonaws.com/mixtapeify/images/whatsapp-button.js";h.appendChild(s);}</script>
 
 <!-- About --> 
     <section id="three" class="wrapper style3 special">
       <div class="inner">
         <header class="major">
           <h2>About SPOTIHUNT</h2>
-          <p>Spotihunt is made in Switzerland and Ukrainia by @mathiasmenzl and Yaroslav (do you have a Twitter-Handle?)</p>
+          <p>Spotihunt is made in Switzerland and Ukrainia by <a href="https://twitter.com/mathiasmenzl" target="_blank" class="icon fa-twitter"><span class="label">@mathiasmenzl</span>@mathiasmenzl</a> and Yaroslav (do you have a Twitter-Handle?)</p>
         </header>
         <ul class="features">
           <li class="icon fa-paper-plane-o">
