--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
     <footer id="footer">
       <ul class="icons">
         <li><a href="https://twitter.com/Spotihunt" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-         <li><a href="whatsapp://send" data-text="Take a look at this awesome website:" data-href="http://spotihunt.com" class="icon fa-whatsapp" style="display:none">Share</a></li>
+         <li><a href="whatsapp://send" data-text="Take a look at this awesome website:" data-href="http://spotihunt.com" class="icon fa-whatsapp" style="decoration: none"></a></li>
         <li><a href="https://www.facebook.com/pages/Spotihunt/380194025503161?fref=ts" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="mailto:spotihunt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
          <li> <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
