--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,10 @@
               <ul>
                 <li>
                   <%= link_to "Home", root_path, data: { no_turbolink: true } %>
-                </li> 
+                </li>
                   <li> <%= link_to "All Hunts", statuses_path %></li>
-                  <li> <%= link_to "About", "/static_pages/about" %></li>
+                  <li> <%= link_to "About", "/static_pages/about" %></li> 
+                <% if user_signed_in? %>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
                 <% else %>
                   <li>
@@ -77,7 +78,9 @@
 <script src="/js/jquery.scrolly.min.js"></script>
 <script src="/js/skel.min.js"></script>
 <script src="/js/init.js"></script>
-
+<!-- whats app share -->
+<script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="https://s3.amazonaws.com/mixtapeify/images/whatsapp-button.js";h.appendChild(s);}</script>
 
 </body>
 </html>
+
