--- a/app/views/statuses/vote.js.erb
+++ b/app/views/statuses/vote.js.erb
@@ -1,2 +1,2 @@
-$(".status-<%=@status.id%>-container .status").remove();
-$(".status-<%=@status.id%>-container").append("<%=j render @status %>")
+// $(".status-<%=@status.id%>-container td").remove();
+$(".status-<%=@status.id%>-container").html("<%=j render @status %>")
