frontend changes status detail

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -14,7 +14,7 @@
       <div class="inner">
         <header class="major">
           <h2>About SPOTIHUNT</h2>
-          <p>Spotihunt is made in Switzerland and Ukrainia by <a href="https://twitter.com/mathiasmenzl" target="_blank" class="icon fa-twitter"><span class="label">@mathiasmenzl</span> @mathiasmenzl</a> and Yaroslav (do you have a Twitter-Handle?)</p>
+          
         </header>
         <ul class="features">
           <li class="icon fa-paper-plane-o">
@@ -37,6 +37,7 @@
           </li>
           <li class="icon fa-code">
             <h3>Rails</h3>
+            <p>Spotihunt is made in Switzerland and Ukrainia by <a href="https://twitter.com/mathiasmenzl" target="_blank" class="icon fa-twitter"><span class="label">@mathiasmenzl</span> @mathiasmenzl</a> and <a href="http://yaroslavfilyk.herokuapp.com/" target="_blank">Yaroslav Filyk </a></p>
             <p>SPOTIHUNT is a Web-App based on Ruby on Rails. Feel free to remix.</p>
             <iframe src="http://ghbtns.com/github-btn.html?user=matmenzl&repo=mixtapeify&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
           </li>
